added another example

--- a/example_1/page_example.html
+++ b/example_1/page_example.html
@@ -48,7 +48,15 @@
         </li>
 
         <li id="num-4" class="list-element">
-            <p>Main methods are: soup.find(), soup.find_all(), soup.select(), soup.select_one()</p>
+            <span>Main methods are: soup.find(), soup.find_all(), soup.select(), soup.select_one()</span>
+        </li>
+
+        <li>
+            <span> 
+                try me through 'soupobj.parent'
+                <span id="me"></span>
+            </span>
+
         </li>
 
     </ul>
